--- a/styles/main.css
+++ b/styles/main.css
@@ -1,17 +1,19 @@
 :root{
     --font : 'Poppins', sans-serif;
-    --backgroundColor :#F3DFC1;
+    --backgroundColor :#F3DFC1; /*for headers and footers*/
     --lightBlue : #368F8B;
     --signOutRed: #EE7B6B;
+    --background: #fff; /*for main pages*/
 }
 body{
     /* overflow: hidden; */
     margin:0;
     font-family: var(--font);
+    background-color:var(--background);
 }
 .main{
     width:70vw;
-    margin: 0 auto;
+    margin: 100px auto 0 auto;
     text-align: center;
 }
 .mainIndex{
@@ -65,6 +67,10 @@ body{
 .signinLink{
     color:#000;
 }
+.signoutLink{
+    color:#000;
+}
+/*Header sign in part*/
 .table{
     display: flex;
     text-align: center;
@@ -98,5 +104,18 @@ body{
     display: flex;
     width:200px; 
     height:30px;
+    text-align: center;
+}
+
+/*Signin */
+.signinForm{
+    width:100vw;
+    margin:300px auto 0 auto;
+    text-align: center;
+}
+/*signup*/
+.signupForm{
+    width:100vw;
+    margin:300px auto 0 auto;
     text-align: center;
 }
