--- a/styles/main.css
+++ b/styles/main.css
@@ -330,7 +330,7 @@ input[type="url"]{
     border-radius: 7px;
   }
   ::-webkit-scrollbar-thumb:hover {
-    background: #b30000; 
+    background: var(--frameColor2); 
   }
 /*responsive tablets*/
 @media only screen and (min-width: 768px){
